[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/guicomponents/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/gui/grey3.png" type="Texture" id=2]
[ext_resource path="res://textures/gui/grey4.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://fonts/Exo2-Black.otf" type="DynamicFontData" id=5]
[ext_resource path="res://textures/gui/grey2.png" type="Texture" id=6]
[ext_resource path="res://textures/gui/grey1.png" type="Texture" id=7]
[ext_resource path="res://fonts/Exo2-SemiBold.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 8 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 2 )

[node name="TabContainer" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="LeftPanelContainer" type="VBoxContainer" parent="TabContainer"]
margin_right = 798.0
margin_bottom = 900.0
size_flags_horizontal = 3

[node name="LeftPanelTitleContainer" type="MarginContainer" parent="TabContainer/LeftPanelContainer"]
margin_right = 798.0
margin_bottom = 128.0
rect_min_size = Vector2( 60, 120 )

[node name="NinePatchRect" type="NinePatchRect" parent="TabContainer/LeftPanelContainer/LeftPanelTitleContainer"]
margin_right = 798.0
margin_bottom = 128.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/LeftPanelContainer/LeftPanelTitleContainer"]
margin_right = 798.0
margin_bottom = 128.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/LeftPanelContainer/LeftPanelTitleContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/LeftPanelContainer/LeftPanelTitleContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 798.0
margin_bottom = 128.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 5 )
text = "Multiplayer!!!!"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/LeftPanelContainer"]
margin_top = 132.0
margin_right = 798.0
margin_bottom = 900.0
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="ButtonsContainer" type="VBoxContainer" parent="TabContainer/LeftPanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 768.0
margin_bottom = 738.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="HostGame" type="Button" parent="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer"]
margin_right = 738.0
margin_bottom = 154.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Host Game"

[node name="JoinGame" type="Button" parent="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer"]
margin_top = 184.0
margin_right = 738.0
margin_bottom = 338.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Join Game"

[node name="Settings" type="Button" parent="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer"]
margin_top = 368.0
margin_right = 738.0
margin_bottom = 522.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="Exit" type="Button" parent="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer"]
margin_top = 552.0
margin_right = 738.0
margin_bottom = 708.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"

[node name="RightPanelContainer" type="MarginContainer" parent="TabContainer"]
margin_left = 802.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
[connection signal="pressed" from="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer/HostGame" to="." method="_on_HostGame_pressed"]
[connection signal="pressed" from="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer/JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="TabContainer/LeftPanelContainer/MarginContainer/ButtonsContainer/Exit" to="." method="_on_Exit_pressed"]
